--- a/src/app/modules/products/edit-product/delete-imagen-p/delete-imagen-p.component.html
+++ b/src/app/modules/products/edit-product/delete-imagen-p/delete-imagen-p.component.html
@@ -8,7 +8,7 @@
     <div class="modal-header">
         <div class="modal-title h4" id="example-modal-sizes-title-lg">
             <i class="icon-2x text-dark-50 
-        fas fa-user-times mx-2"></i> Eliminar Usuario : {{ user_selected.name }}
+            flaticon2-rubbish-bin-delete-button mx-2"></i> Eliminar Imagen: {{ imagen_.file_name }}
         </div>
     </div>
     <div class="overlay overlay-block cursor-default modal-body">
@@ -18,8 +18,7 @@
             </div>
         </ng-container>
 
-        <span>¿ESTÁ SEGURO DE ELIMINAR AL USUARIO: <b>{{ user_selected.name + ' ' + user_selected.surname
-                }}</b>?</span>
+        <span>¿ESTÁ SEGURO DE ELIMINAR ESTA IMAGEN : <b>{{ imagen_.file_name }} </b>?</span>
 
     </div>
     <div class="modal-footer">
