--- a/src/app/modules/users/users-list/users-list.component.html
+++ b/src/app/modules/users/users-list/users-list.component.html
@@ -22,7 +22,8 @@
         </div>
         <div class="col-3">
           <input type="text" class="form-control" name="searchText" placeholder="Buscar" value=""
-            [(ngModel)]="search" /><small class="form-text text-muted"><b>Buscar</b> por correo y Nombres/Apellidos</small>
+            [(ngModel)]="search" /><small class="form-text text-muted"><b>Buscar</b> por correo y
+            Nombres/Apellidos</small>
         </div>
         <div class="col-3">
           <button class="btn btn-primary ml-2" placement="top" [ngbTooltip]="'Filtro'" (click)="allUsers()">
@@ -42,6 +43,7 @@
       <table class="table table-head-custom table-vertical-center" id="kt_advance_table_widget_1">
         <thead>
           <tr class="text-left">
+            <th class="pr-0">N°</th>
             <th class="pr-0">Nombres</th>
             <th class="pr-0">Apellidos</th>
             <th class="pr-0">Email</th>
@@ -50,7 +52,8 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let user of users">
+          <tr *ngFor="let user of users; let i = index">
+            <td>{{ i + 1 }}</td> 
             <td>{{ user.name }}</td>
             <td>{{ user.surname }}</td>
             <td>{{ user.email }}</td>
@@ -108,8 +111,9 @@
 
 
     <div>
-      <ngb-pagination [(collectionSize)]="totalPages" [(page)]="currentPage" [pageSize]="20" [maxSize]="5"
-        [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage($event)"></ngb-pagination>
+      <ngb-pagination [(collectionSize)]="totalPages" [(page)]="currentPage" [pageSize]="10" [maxSize]="5"
+        [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage($event)">
+      </ngb-pagination>
     </div>
 
   </div>
